# QGIS

images/: images.qrc
src/app/: qgisapp.cpp
src/core/providers/ogr/: qgsogrprovider.cpp
src/providers/: CMakeLists.txt
src/providers/fgb/: CMakeLists.txt  packedhilbertrtree.h  qgsfgbfeatureiterator.cpp  qgsfgbfeatureiterator.h  qgsfgbprovider.cpp  qgsfgbprovider.h  qgsfgbsourceselect.cpp  qgsfgbsourceselect.h
src/ui/: qgisapp.ui  qgsfgbsourceselectbase.ui
